# DollsKit

./: .editorconfig  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  DollsKit.sln  LICENSE  Makefile  README.md  autobuild.rb  build.sh  memo.md  memo.txt  recovery_note.md  setup_note.md  shellcheck.sh  technote.md
cpp/: CMakeLists.txt
cpp/shanghai/: CMakeLists.txt
cpp/shanghai/res/: config.default.json  config.json  config.template.json  tw.json
cpp/shanghai/src/: config.cpp  config.h  exec.cpp  exec.h  logger.cpp  logger.h  net.cpp  net.h  shanghai.cpp  taskserver.cpp  taskserver.h  util.cpp  util.h
cpp/shanghai/src/system/: httpserver.cpp  httpserver.h  system.h  taskqueue.h  twitter.cpp  twitter.h  twitterconfig.cpp  twitterconfig.h
cpp/shanghai/src/task/: ddns.cpp  healthcheck.cpp  task.h  twittercheck.cpp
cpp/shanghai/src/web/: echopage.cpp  github.cpp  postpage.cpp  webpage.h
cpp/shanghai/test/: config_test.cpp  curl.cpp  exec_test.cpp  json.cpp  net_test.cpp  taskserver_test.cpp
rshanghai/: .gitignore  Cargo.toml  README.md  build.rs  rustfmt.toml
rshanghai/res/: area.json  forecast_telops.json  openai_discord.toml  openai_line.toml
rshanghai/res/test/weather/: forecast_130000.json  forecast_140000.json  forecast_340000.json  overview_forecast_130000.json  overview_forecast_140000.json
rshanghai/res/test/weather/forecast/: 014100.json  016000.json  060000.json  090000.json  170000.json  180000.json  240000.json  250000.json  280000.json  310000.json
rshanghai/res/test/weather/overview_forecast/: 016000.json  020000.json  030000.json  070000.json  090000.json  200000.json  270000.json  290000.json  400000.json
rshanghai/res/test/weather/overview_week/: 150000.json  270000.json  340000.json
rshanghai/src/: config_help.rs  game.rs  main.rs  sys.rs  sysmod.rs  utils.rs
rshanghai/src/game/: mj.rs
rshanghai/src/res/: area.json  config_default.json  openai_discord.toml  openai_line.toml  openai_prompt.json  tlcheck.toml  tw_contents.json
rshanghai/src/res/http/upload/: index.html
rshanghai/src/res_test/: deletebranch.json  emptybranch.json  top.htm
rshanghai/src/sys/: config.rs  graphics.rs  net.rs  netutil.rs  taskserver.rs  version.rs
rshanghai/src/sysmod/: camera.rs  discord.rs  health.rs  http.rs  httpserver.rs  line.rs  openai.rs  sysinfo.rs  twitter.rs  weather.rs
rshanghai/src/sysmod/http/: github.rs  index.rs  line.rs  line_hook.rs  priv_camera.rs  priv_index.rs  upload.rs
rshanghai/src/sysmod/openai/: basicfuncs.rs  function.rs
rshanghai/src/sysmod/openai/basicfuncs/: math.rs  playtools.rs  storage.rs  system.rs  web.rs
rshanghai/src/utils/: chat_history.rs  graphics.rs  netutil.rs  parser.rs  playtools.rs  weather.rs
rshanghai/src/utils/playtools/: dice.rs
shanghai/: .gitignore  CMakeLists.txt  Cargo.toml
shanghai/customlog/: Cargo.toml
shanghai/customlog/src/: console.rs  file.rs  lib.rs  logger.rs
shanghai/customlog/src/logger/: console.rs  file.rs
shanghai/customlog/tests/: filelog.rs  panic.rs
shanghai/res/: config.default.json  tw.json
shanghai/rshanghai/res/test/scraping/: ikkyu.html
shanghai/rshanghai/res/test/weather/forecast/: 017000.json  070000.json  140000.json  260000.json  390000.json  430000.json
shanghai/rshanghai/res/test/weather/overview_forecast/: 017000.json  060000.json  100000.json  220000.json  300000.json  350000.json  380000.json  390000.json  410000.json  471000.json  474000.json
shanghai/rshanghai/src/: sys.rs  sysmod.rs
shanghai/rshanghai/src/sysmod/: camera.rs  line.rs
shanghai/rshanghai/src/sysmod/http/: github.rs  priv_camera.rs
shanghai/rshanghai/src/sysmod/openai/: function.rs
shanghai/rshanghai/src/sysmod/openai/basicfuncs/: system.rs  web.rs
shanghai/rshanghai/src/utils/: weather.rs
shanghai/script/: cron.txt.in
shanghai/shanghai/: Cargo.toml  build.rs
shanghai/shanghai/res/: openai_discord.toml  openai_twitter.toml
shanghai/shanghai/res/test/github/: simplepush.json
shanghai/shanghai/res/test/weather/forecast/: 011000.json  030000.json  230000.json  420000.json  450000.json
shanghai/shanghai/src/: lib.rs  main.rs  sys.rs  utils.rs
shanghai/shanghai/src/sys/: config.rs  taskserver.rs
shanghai/shanghai/src/sysmod/: camera.rs  discord.rs  line.rs  openai.rs  sysinfo.rs  twitter.rs
shanghai/shanghai/src/sysmod/http/: github.rs  index.rs  line_hook.rs  upload.rs
shanghai/shanghai/src/sysmod/openai/: chat_history.rs
shanghai/shanghai/src/utils/: graphics.rs  netutil.rs
shanghai/src/: buildinfo.cpp  buildinfo.h  config.cpp  config.h  exec.cpp  exec.h  logger.cpp  logger.h  net.cpp  net.h  shanghai.cpp  taskserver.cpp  taskserver.h  util.cpp  util.h
shanghai/src/system/: camera.cpp  camera.h  discord.cpp  discord.h  discord_voice.cpp  discord_voice.h  httpserver.cpp  httpserver.h  sysinfo.h  system.cpp  system.h  taskqueue.cpp  twitter.h
shanghai/src/task/: cameratask.cpp  cameratask.h  ddns.cpp  ddns.h  healthcheck.cpp  healthcheck.h  task.h  taskconsume.cpp  taskconsume.h  twittertask.cpp  twittertask.h
shanghai/src/web/: echopage.cpp  echopage.h  github.cpp  github.h  house.cpp  house.h  pic.cpp  pic.h  postpage.cpp  postpage.h  toppage.cpp  toppage.h  travisci.cpp  travisci.h  webpage.cpp  webpage.h
shanghai/sys/: Cargo.toml
shanghai/sys/res/: openai_discord.toml  openai_line.toml
shanghai/sys/src/: config.rs  lib.rs  rpienv.rs  sysmod.rs  taskserver.rs
shanghai/sys/src/sysmod/: camera.rs  discord.rs  health.rs  http.rs  line.rs  openai.rs  twitter.rs
shanghai/sys/src/sysmod/http/: github.rs  index.rs  line_hook.rs  priv_camera.rs  priv_index.rs  tmp.rs  upload.rs
shanghai/sys/src/sysmod/openai/: basicfuncs.rs  chat_history.rs  function.rs
shanghai/test/: config_test.cpp  exec_test.cpp  json_test.cpp  taskserver_test.cpp  util_test.cpp
shanghai/utils/: Cargo.toml
shanghai/utils/src/: dir.rs  game.rs  graphics.rs  lib.rs  netutil.rs  parser.rs  weather.rs
shanghai/utils/src/game/: mine_sweeper.rs
shanghai/utils/src/playtools/: dice.rs
shanghai/verinfo/: Cargo.toml
shanghai/verinfo/src/: lib.rs
(+3032 files in other folders)
