[package]
name = "rshanghai"
version = "0.1.0"
edition = "2021"

[profile.dev]
panic = 'abort'

[profile.release]
panic = 'abort'

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Error handling
anyhow = "1.0.93"
thiserror = "2.0.3"
# Static assert
static_assertions = "1.1.0"
# Compiler version
rustc_version_runtime = "0.3.0"
# Bit flags
bitflags = "2.6.0"

# Command line parser
getopts = "0.2.21"
# Logging (abstract layer)
log = "0.4.22"
# Logging (concrete layer)
simplelog = "0.12.2"
# Daemon util
daemonize = "0.5.0"
# Time for log
time = "0.3.36"
chrono = { version = "0.4.38", features = ["clock", "iana-time-zone", "std"] }
# Json
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
serde_with = { version = "3.11.0", features = ["json"] }
# TOML
toml = "0.8.19"

# Async
tokio = { version = "1.41.1", features = ["rt", "rt-multi-thread", "test-util", "macros", "signal", "fs", "process"] }
tokio-stream = "0.1.16"

# HTTP client
reqwest = { version = "0.12.9", features = ["json", "multipart"] }
# URL encode
percent-encoding = "2.3.1"
# BASE64
base64 = "0.22.1"
# RNG
rand = "0.8.5"
# HMAC
hmac = "0.12.1"
sha1 = "0.10.6"
sha2 = "0.10.8"

# HTTP server
actix-web = "4.9.0"
actix-multipart = "0.7.2"
# Discord
serenity = "0.12.4"
poise = "0.6.1"

# Image convert
image = "0.25.5"
# Font
rusttype="0.9.3"
# Scraping
scraper = "0.21.0"
# ChatGPT tokenizer
tiktoken-rs = "0.6.0"

[dev-dependencies]
# Concurrent test control
serial_test = "3.2.0"
# Hex literal for test
hex-literal = "0.4.1"

[build-dependencies]
anyhow = "1.0.93"
