[workspace]
resolver = "3"
members = ["shanghai", "sys", "verinfo", "customlog", "utils", ]
default-members = ["shanghai", "sys", "verinfo", "customlog", "utils"]

[workspace.package]
version = "0.1.0"
authors = ["yappy"]
edition = "2024"
description = "House management system"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
panic = 'abort'

[profile.release]
panic = 'abort'

[workspace.dependencies]
# My crates
sys = { path = "./sys" }
verinfo = { path = "./verinfo" }
customlog = { path = "./customlog"}
utils = { path = "./utils" }

static_assertions = "1.1.0"
anyhow = "1.0.100"
thiserror = "2.0.17"
log = { version = "0.4.28", features = ["std"] }
chrono = { version = "0.4.42", features = ["clock", "iana-time-zone", "std"] }
rand = "0.9.2"

serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
serde_with = { version = "3.15.0", features = ["json"] }
toml = "0.9.8"

tokio = { version = "1.47.1", features = ["rt", "rt-multi-thread", "test-util", "macros", "signal", "fs", "process"] }
tokio-stream = "0.1.17"

reqwest = { version = "0.12.23", features = ["json", "multipart"] }

image = "0.25.8"

# For test
serial_test = "3.2.0"
tempfile = "3.23.0"
hex-literal = "1.0.0"
