[workspace]
resolver = "3"
members = ["shanghai", "sys", "verinfo", "customlog", "utils", ]
default-members = ["shanghai", "sys", "verinfo", "customlog", "utils"]

[workspace.package]
version = "0.1.0"
authors = ["yappy"]
edition = "2024"
description = "House management system"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
panic = 'abort'

[profile.release]
panic = 'abort'
# Let this true to enable debug symbols in release build
# debug = true

[workspace.dependencies]
# My crates
sys = { path = "./sys" }
verinfo = { path = "./verinfo" }
customlog = { path = "./customlog"}
utils = { path = "./utils" }

static_assertions = "1.1.0"
anyhow = "1.0.102"
thiserror = "2.0.18"
log = { version = "0.4.29", features = ["std"] }
chrono = { version = "0.4.43", features = ["clock", "iana-time-zone", "std"] }
rand = "0.9.2"
regex = "1.12.3"

serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
serde_with = { version = "3.16.1", features = ["json"] }
toml = "0.9.12"

tokio = { version = "1.49.0", features = ["rt", "rt-multi-thread", "test-util", "macros", "signal", "fs", "process"] }
tokio-stream = "0.1.18"

reqwest = { version = "0.13.2", features = ["json", "multipart", "query"] }

image = "0.25.9"

# For test
serial_test = "3.3.1"
tempfile = "3.25.0"
hex-literal = "1.1.0"
