[package]
name = "shanghai"
version.workspace = true
authors.workspace = true
edition.workspace = true
description.workspace = true

[dependencies]
sys.workspace = true
verinfo.workspace = true

anyhow.workspace = true
# Logging (abstract layer)
log.workspace = true
chrono.workspace = true

# Logging (concrete layer)
simplelog = "0.12.2"
# Time for log
time = "0.3.41"
# Daemon util
daemonize = "0.5.0"
# Command line parser
getopts = "0.2.21"

[dev-dependencies]
