[package]
name = "shanghai"
version.workspace = true
authors.workspace = true
edition.workspace = true
description.workspace = true

[dependencies]
customlog.workspace = true
sys.workspace = true
verinfo.workspace = true

anyhow.workspace = true
log.workspace = true
chrono.workspace = true

# Daemon util
daemonize = "0.5.0"
# Command line parser
getopts = "0.2.24"

[dev-dependencies]
