[package]
name = "sys"
version.workspace = true
authors.workspace = true
edition.workspace = true
description.workspace = true

[dependencies]
utils.workspace = true
verinfo.workspace = true

# Error handling
anyhow.workspace = true
# Bit flags
bitflags = "2.10.0"
# RNG
rand.workspace = true
# Log
log.workspace = true

chrono.workspace = true
# Json
serde.workspace = true
serde_json.workspace = true
serde_with.workspace = true
# TOML
toml.workspace = true

# Async
tokio.workspace = true
tokio-stream.workspace = true

# HTTP client
reqwest.workspace = true
# BASE64
base64 = "0.22.1"

image.workspace = true

# HTTP server
actix-web = "4.11.0"
actix-multipart = "0.7.2"
# Discord
serenity = "0.12.4"
poise = "0.6.1"

# ChatGPT tokenizer
tiktoken-rs = "0.7.0"

[dev-dependencies]
# Concurrent test control
serial_test.workspace = true
# Temporary file
tempfile.workspace = true
