[package]
name = "utils"
version.workspace = true
authors.workspace = true
edition.workspace = true
description.workspace = true

[dependencies]
static_assertions.workspace = true
anyhow.workspace = true
thiserror.workspace = true
chrono.workspace = true
rand.workspace = true

# Json
serde.workspace = true
serde_json.workspace = true

tokio.workspace = true

# HTTP client
reqwest.workspace = true
# URL encode
percent-encoding = "2.3.2"
# HMAC
hmac = "0.12.1"
sha1 = "0.10.6"
sha2 = "0.10.9"

# Image convert
image.workspace = true
# Font
rusttype="0.9.3"

[dev-dependencies]
# Hex literal for test
hex-literal.workspace = true
